SERVER-67282 $add not to use DoubleDoubleSum in SBE